...
     editing. Defaults to `false`
     - parameter maximumLength:                Restricts the length of the text 
     entered into the field, such that a user cannot enter any more text after 
     the limit has been reached.
     - parameter resignFirstResponderOnReturn: Whether the text view should
     resign first responder status and activate the next first responder
     upon the user pressing the "Return" key on the keyboard. Defaults to
     `true`.
     - parameter validationRules:              Rules used for validating the
     input
     - parameter viewConfigurator:             An optional block used to
     configure the appearance of the float label
     
...
