...
        }
    }
    
    /// A string validation rule to check whether the string is
    /// a valid email address
    public static var email: ValidationRule<String> {
        return regex(EmailRegex, failureMessage: NSLocalizedString("The email address is invalid", comment: "Invalid email error message"))
    }

    /**
     A validation rule that uses a regular expression to verify the
     validity of a string
     
...
